--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="webstoryboy">
+    <meta name="author" content="JIHYE">
     <meta name="description" content="웹 퍼블리셔를 위한 정보 공유 사이트입니다.">
-    <meta name="keywords" content="웹스토리보이, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, webstoryboy, publisher, css3, html, markup, design">
-    <title>웹스토리보이 | Webstoryboy</title>
+    <meta name="keywords" content="지혜, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, publisher, css3, html, markup, design">
+    <title>지혜 | JIHYE </title>
 
     <!-- css -->
     <link href="assets/css/bootstrapTheme.css" rel="stylesheet">
