--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="brand" href="http://webstoryboy.co.kr">web's</a>
+                <a class="brand" href="https://jihyeh53.github.io/dothome21/">jihye's</a>
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
-                        <li><a href="https://wess.tistory.com/">Tistory</a></li>
+                        <li><a href="https://wisdominyellow.tistory.com/">Tistory</a></li>
                         <li><a href="https://codepen.io/webstoryboy">Codepen</a></li>
                     </ul>
                 </div>
