--- a/class/index.html
+++ b/class/index.html
@@ -27,16 +27,16 @@
 
     <!-- Facebook meta tags -->
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="웹스토리보이" />
-    <meta property="og:url" content="https://webstoryboy.co.kr/" />
+    <meta property="og:title" content="지혜" />
+    <meta property="og:url" content="https://jihyeh53.github.io/dothome21/" />
     <meta property="og:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
-    <meta property="og:site_name" content="웹스토리보이" />
+    <meta property="og:site_name" content="지혜" />
     <meta property="og:description" content="웹과 관련된 정보를 제공합니다." />
 
     <!-- twitter meta tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@webstoryboy" />
-    <meta name="twitter:title" content="웹스토리보이" />
+    <meta name="twitter:title" content="지혜" />
     <meta name="twitter:description" content="웹과 관련된 정보를 제공합니다." />
     <meta property="twitter:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
 
@@ -66,11 +66,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="../index.html" class="navbar-brand">WEB'S &lt;/doc&gt;</a>
+                <a href="../index.html" class="navbar-brand">JIHYE &lt;/doc&gt;</a>
             </div>
             <nav class="collapse navbar-collapse bs-navbar-collapse pull-right" role="navigation">
                 <ul class="nav navbar-nav">
-                    <li><a href="https://websinssa.tistory.com/">Tistory</a></li>
+                    <li><a href="https://wisdominyellow.tistory.com/">Tistory</a></li>
                     <li><a href="https://codepen.io/webstoryboy">Codepen</a></li>
                 </ul>
             </nav>
@@ -80,7 +80,7 @@
     <div class="bs-header bgs1" id="content">
         <div class="container">
             <h1>Class v1.0 &lt;/doc&gt;</h1>
-            <p><a href="https://webstoryboy.co.kr" target="_blank">webstoryboy.co.kr</a></p>
+            <p><a href="https://jihyeh53.github.io/dothome21/" target="_blank">jihyeh53.github.io</a></p>
         </div>
     </div>
 
@@ -800,7 +800,7 @@
             <ul class="footer-links muted">
                 <li>Currently v2.0</li>
                 <li>&middot;</li>
-                <li><a href="http://webstoryboy.co.kr">webstoryboy</a></li>
+                <li><a href="https://jihyeh53.github.io/dothome21/">JIHYE</a></li>
                 <li>&middot;</li>
                 <li><a href="http://cafe.naver.com/crossbrowsing" target="_blank">publisher cafe</a></li>
                 <li>&middot;</li>
