--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
     <!-- Facebook meta tags -->
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="웹스토리보이" />
+    <meta property="og:title" content="지혜" />
     <meta property="og:url" content="http://richclub8.dothome.co.kr/responsive/html5/index.html" />
     <meta property="og:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
-    <meta property="og:site_name" content="웹스토리보이" />
+    <meta property="og:site_name" content="지혜" />
     <meta property="og:description" content="웹과 관련된 정보를 제공합니다." />
 
     <!-- twitter meta tags -->
@@ -108,7 +108,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="brand" href="https://jihyeh53.github.io/dothome21/">jihye's</a>
+                <a class="brand" href="https://jihyeh53.github.io/dothome21/">JIHYE</a>
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="https://wisdominyellow.tistory.com/">Tistory</a></li>
@@ -260,7 +260,7 @@
             <div class="row">
                 <div class="span12">
                     <h5>
-                        <a href="http://webstoryboy.co.kr" target="_blank">Webstoryboy</a>
+                        <a href="https://jihyeh53.github.io/dothome21/" target="_blank">JIHYE</a>
                         <span id="clock"></span>
                         <span id="infor"></span>
                     </h5>
