--- a/javascript/javascript100.html
+++ b/javascript/javascript100.html
@@ -216,7 +216,7 @@
     var y = 200; //변수 y에 숫자 200을 저장
     var z = "javascript"; //변수 z에 문자 javascript 저장
 
-    document.write("*** 01. 변수 ***&lt;br>");
+    document.write("*** 01. 변수 ***");
     document.write(x);
     document.write(y);
     document.write(z);
@@ -477,12 +477,12 @@
         c: "javascript"
     }
 
-    document.write("*** 14. 객체 ***<br>")
-    document.write(obj.a, "<br>")
-    document.write(obj.b, "<br>")
-    document.write(obj.b[0], "<br>")
-    document.write(obj.b[1], "<br>")
-    document.write(obj.c, "<br><br>")
+    document.write("*** 14. 객체 ***")
+    document.write(obj.a)
+    document.write(obj.b)
+    document.write(obj.b[0])
+    document.write(obj.b[1])
+    document.write(obj.c)
 }
 </code></pre>
         </div>
@@ -501,9 +501,9 @@
     const obj = {a, b, c}
 
     document.write("*** 15. 객체 ***<br>")
-    document.write(obj.a, "<br>")
-    document.write(obj.b, "<br>")
-    document.write(obj.c, "<br><br>")
+    document.write(obj.a)
+    document.write(obj.b)
+    document.write(obj.c)
 }
 </code></pre>
         </div>
@@ -531,11 +531,11 @@
     }
 
     document.write("*** 16. 객체 ***<br>")
-    document.write(obj.a, "<br>");
-    document.write(obj.b, "<br>");
-    document.write(obj.b[0], "<br>");
-    document.write(obj.b[1], "<br>");
-    document.write(obj.c, "<br>");
+    document.write(obj.a);
+    document.write(obj.b);
+    document.write(obj.b[0]);
+    document.write(obj.b[1]);
+    document.write(obj.c);
     obj.d();
     obj.e();
     obj.f();
