--- a/javascript/javascript300.html
+++ b/javascript/javascript300.html
@@ -115,7 +115,11 @@
             border-bottom: 1px solid #E6E6E6;
             line-height: 1.6;
         }
-        .sample pre {margin: 0 !important; border-radius: 0;;}
+        .sample pre {
+            margin: 0 !important;
+            border-radius: 0;
+            ;
+        }
         .sample .desc {
             padding: 25px;
             border-bottom: 1px solid #E6E6E6;
@@ -141,7 +145,7 @@
         }
         ol {
             list-style: none;
-            margin-bottom: 40px;
+            margin-bottom: 5px;
         }
         ol li {
             display: inline;
@@ -165,13 +169,13 @@
         ol li.active a {
             color: #fff;
         }
-        .mt20{
-            margin-top:20px;
+        .mt20 {
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <h1>Javascript 문법 정리</h1>
+    <h1 class="mt20">Javascript 문법 정리</h1>
     <ol>
         <li><a href="javascript100.html">변수</a></li>
         <li><a href="javascript100.html">상수</a></li>
