--- a/javascript/javascript100.html
+++ b/javascript/javascript100.html
@@ -115,7 +115,11 @@
             border-bottom: 1px solid #E6E6E6;
             line-height: 1.6;
         }
-        .sample pre {margin: 0 !important; border-radius: 0;;}
+        .sample pre {
+            margin: 0 !important;
+            border-radius: 0;
+            ;
+        }
         .sample .desc {
             padding: 25px;
             border-bottom: 1px solid #E6E6E6;
@@ -141,7 +145,7 @@
         }
         ol {
             list-style: none;
-            margin-bottom: 40px;
+            margin-bottom: 5px;
         }
         ol li {
             display: inline;
@@ -165,8 +169,8 @@
         ol li.active a {
             color: #fff;
         }
-        .mt20{
-            margin-top:20px;
+        .mt20 {
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -186,7 +190,7 @@
         <li><a href="javascript200.html">반복문</a></li>
     </ol>
 
-    <h2>데이터 저장하기</h2>
+    <h2 class="mt20">데이터 저장하기</h2>
     <ul>
         <li>01. 변수 : 데이터 저장</li>
         <li>02. 변수 : 데이터 저장 + 데이터 변경</li>
