--- a/javascript/javascript400.html
+++ b/javascript/javascript400.html
@@ -311,8 +311,43 @@
     }
     document.write(sum);
 
-    document.write("<br><br>");
+    document.write("&lt;br&gt;&lt;br&gt;");
 }
+</code></pre>
+        </div>
+    </div>
+
+    <hr>
+
+    <div id="sample1" class="sample">
+        <h2>05. 구구단 출력하기 <span class="dot"></span></h2>
+        <div class="code">
+<pre class="line-numbers"><code class="language-js">{
+    {
+        document.write("*** 05.구구단 출력하기 ***<br>");
+
+        //2 ~ 9 for(var i=2; i&lt;=9; i++)
+        //1 ~ 9 for(var i=1; i&lt;=9; i++)
+        //num1 * num2 = sum;
+
+        //2 * 1 = 2;          3 * 1 = 3;
+        //2 * 2 = 2;          3 * 2 = 6;
+        //2 * 3 = 2;          3 * 3 = 9;
+        //2 * 4 = 2;          .   .   .
+        //2 * 5 = 2;          9 * 1 = 9;
+        //2 * 6 = 2;          9 * 2 = 18;
+        //2 * 7 = 2;
+        //2 * 8 = 2;
+        //2 * 9 = 2;
+        
+        for(var i=2; i&lt;=9; i++){
+            for(var j=1; j&lt;=9; j++){
+                var sum = i * j;       
+                document.write(i + "*" + j,"=", +sum,"&lt;br&gt;");
+            }
+        }
+        document.write("&lt;br&gt;");
+    }
 </code></pre>
         </div>
     </div>
@@ -326,7 +361,7 @@
             padding: 5px;
     }
     </style>
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.0/prism.min.js"></script>
     <script>
@@ -415,7 +450,7 @@
         //sample5
         //05. 구구단 출력하기
         {
-            document.write("*** 05.구구단 만들기 ***<br>");
+            document.write("*** 05.구구단 출력하기 ***<br>");
 
             //2 ~ 9 for(var i=2; i<=9; i++)
             //1 ~ 9 for(var i=1; i<=9; i++)
@@ -442,7 +477,7 @@
         //sample6
         //06. 테이블 만들기
         {
-            document.write("*** 102. 테이블 만들기2***<br>");
+            document.write("*** 102. 테이블 만들기***<br>");
 
             let num = 100;
             let table = "<table>";
@@ -465,7 +500,7 @@
         //sample7
         //07. 테이블 만들기2
         {
-            document.write("*** 07. 테이블 만들기2***<br>");
+            document.write("*** 07. 테이블 만들기***<br>");
 
             let num = 100;
             let table = "<table>";
