--- a/javascript/javascript200.html
+++ b/javascript/javascript200.html
@@ -184,6 +184,12 @@
         .ol4::before{
             content:"데이터 제어하기 : ";
         }
+        .ol5::before{
+            content:"데이터 연습하기 : ";
+        }
+        .ol6::before{
+            content:"데이터 메서드 : ";
+        }
     </style>
 </head>
 <body>
@@ -195,7 +201,10 @@
         <li><a href="javascript100.html">객체(object)</a></li>
     </ol>
     <ol class="ol2">
-        <li><a href="javascript500.html">데이터</a></li>
+        <li><a href="javascript500.html">변수</a></li>
+        <li><a href="javascript500.html">상수</a></li>
+        <li><a href="javascript500.html">배열</a></li>
+        <li><a href="javascript500.html">객체</a></li>
     </ol>
     <ol class="ol3">
         <li><a href="javascript300.html">함수(function)</a></li>
@@ -204,9 +213,17 @@
         <li><a href="javascript200.html">조건문</a></li>
         <li><a href="javascript200.html">반복문</a></li>
     </ol>
-    <ol>
+    <ol class="ol5">
         <li><a href="javascript400.html">알고리즘</a></li>
     </ol>
+    <ol class="ol6">
+        <li><a href="javascript601.html">배열 메서드</a></li>
+        <li><a href="javascript602.html">문자열 메서드</a></li>
+        <li><a href="javascript603.html">브라우저 메서드</a></li>
+        <li><a href="javascript604.html">날짜 메서드</a></li>
+        <li><a href="javascript605.html">이벤트 메서드</a></li>
+    </ol>
+
 
     <h2 class="mt20">제어문</h2>
     <ul>
@@ -248,7 +265,7 @@
 
     <hr>
 
-    <div id="sample1" class="sample">
+    <div id="sample2" class="sample">
         <h2>02. 다중 if문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
@@ -278,7 +295,7 @@
 
     <hr>
 
-    <div id="sample1" class="sample">
+    <div id="sample3" class="sample">
         <h2>03. 중첩 if문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
@@ -304,7 +321,7 @@
 
     <hr>
 
-    <div id="sample1" class="sample">
+    <div id="sample4" class="sample">
         <h2>04. switch문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
@@ -334,7 +351,7 @@
 
     <hr>
 
-    <div id="sample1" class="sample">
+    <div id="sample5" class="sample">
         <h2>05. 삼항 연산자(조건부 연산자) <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
@@ -356,7 +373,7 @@
 
     <hr>
 
-    <div id="sample1" class="sample">
+    <div id="sample6" class="sample">
         <h2>06. if 생략문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
@@ -373,7 +390,7 @@
 
     <hr>
 
-    <div id="sample1" class="sample">
+    <div id="sample7" class="sample">
         <h2>07. while문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
@@ -391,7 +408,7 @@
 
     <hr>
 
-    <div id="sample1" class="sample">
+    <div id="sample8" class="sample">
         <h2>08. do while문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
@@ -409,7 +426,7 @@
 
     <hr>
 
-    <div id="sample1" class="sample">
+    <div id="sample9" class="sample">
         <h2>09. for문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
@@ -429,7 +446,7 @@
 
     <hr>
 
-    <div id="sample1" class="sample">
+    <div id="sample10" class="sample">
         <h2>10. 중첩 for문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
@@ -448,7 +465,7 @@
 
     <hr>
 
-    <div id="sample1" class="sample">
+    <div id="sample11" class="sample">
         <h2>11. forEach() <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
@@ -485,7 +502,7 @@
 
     <hr>
 
-    <div id="sample1" class="sample">
+    <div id="sample12" class="sample">
         <h2>12. for of문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
@@ -503,7 +520,7 @@
 
     <hr>
 
-    <div id="sample1" class="sample">
+    <div id="sample13" class="sample">
         <h2>13. for in문<span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
@@ -536,7 +553,7 @@
 
     <hr>
 
-    <div id="sample1" class="sample">
+    <div id="sample14" class="sample">
         <h2>14. break문<span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
@@ -564,7 +581,7 @@
 
     <hr>
 
-    <div id="sample1" class="sample">
+    <div id="sample15" class="sample">
         <h2>15. continue문<span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
@@ -882,6 +899,7 @@
                 document.write(num, "&nbsp");
             }
         }
+        
     </script>
 </body>
 </html>
