--- a/javascript/javascript603.html
+++ b/javascript/javascript603.html
@@ -225,7 +225,7 @@
     </ol>
 
 
-    <h2 class="mt20">데이터 불러오기</h2>
+    <h2 class="mt20">브라우저 메서드</h2>
     <ul>
         <li><a href="#sample1">01. 변수 : 데이터 불러오기</li>
         <li><a href="#sample2">02. 상수 : 데이터 불러오기</li>
