--- a/index.html
+++ b/index.html
@@ -167,7 +167,6 @@
                         <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".script">SCRIPT</a></li>
                         <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".reference">REFERENCE</a></li>
                         <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".site">SITE</a></li>
-                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".design">DESIGN</a></li>
                         <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".css">CSS</a></li>
                     </ul>
                 </div>
@@ -199,7 +198,7 @@
 
                     
                     <!-- box -->
-                    <section class="color-shape class">
+                    <section class="color-shape script">
                         <a href="javascript/javascript100.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -221,7 +220,7 @@
 
 
                      <!-- box -->
-                     <section class="color-shape class">
+                     <section class="color-shape site">
                         <a href="layout/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -241,7 +240,48 @@
                     </section>
                     <!-- //box -->
 
-                    
+                     <!-- box -->
+                     <section class="color-shape reference">
+                        <a href="refer-html/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">HTML</span>
+                                    <span class="overlay-text-thumb-donut">레퍼런스</span>
+                                    <span class="overlay-text-thumb1-donut">레퍼런스</span>
+                                    <span class="overlay-text-thumb2-donut">HTML</span>
+                                </div>
+                                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>HTML</h5>
+                                    <p>레퍼런스</p>
+                                    <span>HTML</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+
+                     <!-- box -->
+                     <section class="color-shape reference">
+                        <a href="refer-css/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">CSS</span>
+                                    <span class="overlay-text-thumb-donut">레퍼런스</span>
+                                    <span class="overlay-text-thumb1-donut">레퍼런스</span>
+                                    <span class="overlay-text-thumb2-donut">CSS</span>
+                                </div>
+                                <img src="assets/img/svg-grapes.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>CSS</h5>
+                                    <p>레퍼런스</p>
+                                    <span>CSS</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
 
 
                 </div>
