--- a/javascript/javascript100.html
+++ b/javascript/javascript100.html
@@ -187,6 +187,9 @@
         .ol5::before{
             content:"데이터 연습하기 : ";
         }
+        .ol6::before{
+            content:"데이터 메서드 : ";
+        }
     </style>
 </head>
 <body>
@@ -213,7 +216,13 @@
     <ol class="ol5">
         <li><a href="javascript400.html">알고리즘</a></li>
     </ol>
-
+    <ol class="ol6">
+        <li><a href="javascript601.html">배열 메서드</a></li>
+        <li><a href="javascript602.html">문자열 메서드</a></li>
+        <li><a href="javascript603.html">브라우저 메서드</a></li>
+        <li><a href="javascript604.html">날짜 메서드</a></li>
+        <li><a href="javascript605.html">이벤트 메서드</a></li>
+    </ol>
 
     <h2 class="mt20">데이터 저장하기</h2>
     <ul>
@@ -585,7 +594,6 @@
             var x = 100;              //변수 x에 숫자 100을 저장
             var y = 200;              //변수 y에 숫자 200을 저장
             var z = "javascript";     //변수 z에 문자 javascript 저장
-            var x = 300;
 
             document.write("*** 01. 변수 ***<br>");
             document.write(x, "<br>");
