--- a/refer-css/index.html
+++ b/refer-css/index.html
@@ -69,7 +69,7 @@
             background-color: #fff;
             padding: 60px;
             border: solid#000;
-            margin-bottom: 300px;
+            margin-bottom: 100px;
         }
         .refer h3{
             display: inline-block;
@@ -101,6 +101,20 @@
             color: #fff;
             cursor: crosshair;
         }
+        .link li{
+            list-style: none;
+        }
+        .link li a{
+            color:#fff;
+            padding: 10px;
+            text-decoration: none;
+            background-color: #000;
+            display: inline-block;
+            margin-bottom: 10px;
+        }
+        .link li a:hover{
+            background-color: #000;
+        }
         @media(max-width:1220px){
             #contents{
                 width: 98%;
@@ -110,21 +124,27 @@
             #contents{
                 width: 96%;
             }
+            #header{
+                padding: 6% 2% 2% 2%;
+            }
             #header h1{
                 font-size: 16px;
             }
             #header strong{
                 font-size: 14px;
+                bottom: 22% 5% 5%;
             }
             main h2{
                 font-size: 30px;
             }
             .refer{
                 padding: 10px;
+                margin-bottom: 10px;
             }
             .refer h3{
                 margin: 10px;
                 font-size: 16px;
+                padding: 6px 10px;
             }
             .refer table th{
                 padding: 8px;
@@ -145,6 +165,9 @@
     <!-- header -->
     <main id="contents">
         <h2>CSS <em>레퍼런스 북</em></h2>
+        <ul class="link">
+            <li><a href="../javascript/javascript602-sample01.html">CSS 속성 첫 글자 검색하기</a></li>
+        </ul>
         <section class="refer">
             <h3>Alphabet</h3>
             <table>
