--- a/javascript/javascript100.html
+++ b/javascript/javascript100.html
@@ -223,6 +223,9 @@
         <li><a href="javascript604.html">날짜 메서드</a></li>
         <li><a href="javascript605.html">이벤트 메서드</a></li>
     </ol>
+    <ol class="ol7">
+        <li><a href="javascript606.html">샘플</a></li>
+    </ol>
 
     <h2 class="mt20">데이터 저장하기</h2>
     <ul>
@@ -289,7 +292,7 @@
     <hr>
 
     <div id="sample3" class="sample">
-        <h2>03. 변수 : 데이터 저장소 + 데이터 변경 <span class="dot"></span></h2>
+        <h2>03. 변수 : 데이터 저장소 + 데이터 변경 + 데이터 추가 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{        
     let x = 100;
