--- a/javascript/javascript602.html
+++ b/javascript/javascript602.html
@@ -265,7 +265,9 @@
         <li><a href="javascript604.html">날짜 메서드</a></li>
         <li><a href="javascript605.html">이벤트 메서드</a></li>
     </ol>
-
+    <ol class="ol7">
+        <li><a href="javascript606.html">샘플</a></li>
+    </ol>
 
     <h2 class="mt20">문자열 메서드</h2>
     <ul>
@@ -292,7 +294,7 @@
 
     <h2 class="mt20">문자열 메서드 샘플</h2>
     <ul>
-        <li><a href="javascripsamplet602-1.html">01. charAt()이용한 첫 글자 검색하기</li>
+        <li><a href="javascriptsample602-1.html">01. charAt()이용한 첫 글자 검색하기</li>
        
     </ul>
 
