--- a/javascript/javascript500.html
+++ b/javascript/javascript500.html
@@ -223,7 +223,9 @@
         <li><a href="javascript604.html">날짜 메서드</a></li>
         <li><a href="javascript605.html">이벤트 메서드</a></li>
     </ol>
-
+    <ol class="ol7">
+        <li><a href="javascript606.html">샘플</a></li>
+    </ol>
 
     <h2 class="mt20">데이터 불러오기</h2>
     <ul>
@@ -283,9 +285,9 @@
         
     const x = 100, y = 200; z = "javascript";
 
-    document.write(x,"<br>");
-    document.write(y,"<br>");
-    document.write(z,"<br><br>");
+    document.write(x);
+    document.write(y);
+    document.write(z);
 }
 </code></pre>
         </div>
@@ -530,11 +532,9 @@
         b: 200,
         c: "javascript",
     }
-        document.write(Object.keys(obj),"<br>");
-        document.write(Object.values(obj),"<br>");
-        document.write(Object.entries(obj),"<br>");
-
-        document.write("<br>");   
+        document.write(Object.keys(obj));
+        document.write(Object.values(obj));
+        document.write(Object.entries(obj));  
 }
 </code></pre>
         </div>
@@ -557,9 +557,9 @@
     const name2 = obj.b;
     const name3 = obj.c;
 
-    document.write(name1, "<br>")
-    document.write(name2, "<br>")
-    document.write(name3, "<br><br>")
+    document.write(name1)
+    document.write(name2)
+    document.write(name3)
 }
 </code></pre>
         </div>
@@ -601,20 +601,19 @@
         {a: 500, b:600, c:"javascript"},
     ];
 
-        document.write(obj[0].a, "<br>")
-        document.write(obj[1].b, "<br>")
-        document.write(obj[2].c, "<br><br>")
+        document.write(obj[0].a)
+        document.write(obj[1].b)
+        document.write(obj[2].c)
 
         //obj.map(function(){};
         //obj.map((el) => {}));
         //obj.map(el => {});
 
         obj.map(el => {
-            document.write(el.a, "<br>")
-            document.write(el.b, "<br>")
-            document.write(el.c, "<br>")
+            document.write(el.a)
+            document.write(el.b)
+            document.write(el.c)
         });
-        document.write("<br>");
 }
 </code></pre>
         </div>
