--- a/javascript/javascript609.html
+++ b/javascript/javascript609.html
@@ -253,7 +253,7 @@
     </ol>
 
 
-    <h2 class="mt20">이벤트 메서드</h2>
+    <h2 class="mt20">요소 메서드</h2>
     <ul>
         <li><a href="#sample1">01. 변수 : 데이터 불러오기</li>
     </ul>
