--- a/javascript/javascript400.html
+++ b/javascript/javascript400.html
@@ -188,15 +188,39 @@
             content:"데이터 제어하기 : ";
         }
         .ol5::before{
-            content:"데이터 연습하기 : ";
+            content:"데이터 내장 객체 : ";
         }
         .ol6::before{
-            content:"데이터 메서드 : ";
+            content:"데이터 공부하기 : ";
+        }
+        .page{
+            text-align: right;
+            top: 10px;
+            margin-bottom: 3px;
+            position: absolute;
+            right: 20px;
+            left: 15px;
+        }
+        .page li{
+            display: inline;
+            list-style: none;
+        }
+        .page li a{
+            text-decoration: none;
+            color: #222;
+        }
+        .page li a:hover{
+           color: #0f834b;
         }
     </style>
 </head>
 <body>
     <h1>Javascript 문법 정리</h1>
+    <ul class="page">
+        <li><a href="../refer-html/index.html">HTML</a></li>
+        <li><a href="../refer-css/index.html">CSS</a></li>
+        <li><a href="../javascript/javascript100.html">JAVASCRIPT</a></li>
+    </ul>
     <ol class="ol1">
         <li><a href="javascript100.html">변수</a></li>
         <li><a href="javascript100.html">상수</a></li>
@@ -217,30 +241,31 @@
         <li><a href="javascript200.html">반복문</a></li>
     </ol>
     <ol class="ol5">
-        <li><a href="javascript400.html">알고리즘</a></li>
+        <li><a href="javascript602.html">문자열 객체</a></li>
+        <li><a href="javascript601.html">배열 객체</a></li>
+        <li><a href="javascript604.html">날짜 객체</a></li>
+        <li><a href="javascript608.html">수학 객체</a></li>
+        <li><a href="javascript607.html">숫자 객체</a></li>
+        <li><a href="javascript607.html">브라우저 객체</a></li>
+        <li><a href="javascript609.html">요소 객체</a></li>
+        <li><a href="javascript605.html">이벤트 객체</a></li>
     </ol>
     <ol class="ol6">
-        <li><a href="javascript601.html">배열 메서드</a></li>
-        <li><a href="javascript602.html">문자열 메서드</a></li>
-        <li><a href="javascript603.html">브라우저 메서드</a></li>
-        <li><a href="javascript604.html">날짜 메서드</a></li>
-        <li><a href="javascript605.html">이벤트 메서드</a></li>
-    </ol>
-    <ol class="ol7">
         <li><a href="javascript606.html">샘플</a></li>
+        <li><a href="javascript400.html">알고리즘</a></li>
     </ol>
 
     <h2 class="mt20">알고리즘</h2>
     <ul>
-        <li a href=#smaple1>01. 1부터 100까지 출력하기</li>
-        <li a href=#smaple2>02. 1부터 100까지 출력하기 : 짝수만</li>
-        <li a href=#smaple3>03. 1부터 100까지 출력하기 : 5의 배수만</li>
-        <li a href=#smaple4>04. 1부터 100까지 출력하기 : 짝수는 빨간색, 홀수는 파란색</li>
-        <li a href=#smaple4>05. 1부터 100까지 합 출력하기 </li>
-        <li a href=#smaple5>05. 구구단 출력하기</li>
-        <li a href=#smaple6>06. 테이블 만들기1</li>
-        <li a href=#smaple7>07. 테이블 만들기2</li>
-        <li a href=#smaple8>08. 테이블 만들기3 - 짝수만</li>
+        <li><a href="#smaple1">01. 1부터 100까지 출력하기</li>
+        <li><a href="#smaple2">02. 1부터 100까지 출력하기 : 짝수만</li>
+        <li><a href="#smaple3">03. 1부터 100까지 출력하기 : 5의 배수만</li>
+        <li><a href="#smaple4">04. 1부터 100까지 출력하기 : 짝수는 빨간색, 홀수는 파란색</li>
+        <li><a href="#smaple4">05. 1부터 100까지 합 출력하기 </li>
+        <li><a href="#smaple5">05. 구구단 출력하기</li>
+        <li><a href="#smaple6">06. 테이블 만들기1</li>
+        <li><a href="#smaple7">07. 테이블 만들기2</li>
+        <li><a href="#smaple8">08. 테이블 만들기3 - 짝수만</li>
     </ul>
 
     <hr>
