--- a/javascript/javascript500.html
+++ b/javascript/javascript500.html
@@ -288,7 +288,7 @@
 
     //let x =100;
     //let x =200;
-    //let x =javascript;
+    //let x ="javascript";
 
     let x = 100, y = 200; z = "javascript";
 
@@ -341,7 +341,7 @@
     <div id="sample4" class="sample">
         <h2>04. 배열 : 데이터 불러오기 : 2차 배열 <span class="dot"></span></h2>
         <div class="code">
-<pre class="line-numbers"><code class="language-js">{\
+<pre class="line-numbers"><code class="language-js">{
     document.write("***04. 배열 : 데이터 불러오기 : 2차 배열***<br>");
 
     const arr =[100, 200,["javascript", "jquery"]];
@@ -827,7 +827,7 @@
             
             //let x =100;
             //let x =200;
-            //let x =javascript;
+            //let x ="javascript";
 
             let x = 100, y = 200; z = "javascript";
 
@@ -849,7 +849,7 @@
         //sample3
         //03. 배열 : 데이터 불러오기
         {
-            document.write("***02. 배열 : 데이터 불러오기***<br>");
+            document.write("***03. 배열 : 데이터 불러오기***<br>");
 
             const arr = [100, 200, "javascript"]
 
@@ -860,7 +860,7 @@
         //sample4
         //04. 배열 : 데이터 불러오기 : 2차 배열
         {
-            document.write("***03. 배열 : 데이터 불러오기 : 2차 배열***<br>");
+            document.write("***04. 배열 : 데이터 불러오기 : 2차 배열***<br>");
 
             const arr =[100, 200,["javascript", "jquery"]];
 
@@ -873,7 +873,7 @@
         //sample5
         //05. 배열 : 데이터 불러오기 : 갯수 구하기
         {
-            document.write("***04. 배열 : 데이터 불러오기 : 갯수 구하기***<br>");
+            document.write("***05. 배열 : 데이터 불러오기 : 갯수 구하기***<br>");
 
             const arr = [100, 200, "javascript"];
             document.write(arr.length, "<br><br>")
@@ -881,7 +881,7 @@
         //sample6
         //06. 배열 : 데이터 불러오기 : for문
         {
-            document.write("***05. 배열 : 데이터 불러오기 : for문***<br>");
+            document.write("***06. 배열 : 데이터 불러오기 : for문***<br>");
 
             const arr = [100, 200, 300, 400, 500];
 
@@ -891,19 +891,19 @@
         }
         //7월 26일 숙제
         //배열 데이터의 합을 출력하세요!!
-        {
-            const arr =[100, 200, 300, 400, 500];
+        // {
+        //     const arr =[100, 200, 300, 400, 500];
 
-            document.write("***배열 : 데이터의 합***<br>");    
+        //     document.write("***배열 : 데이터의 합***<br>");    
 
-            let sum = 0;
+        //     let sum = 0;
 
-            for(let i=0; i<5; i++) {
-            sum += arr[i];
-            }
-            document.write(sum);
-            document.write("<br><br>");
-        }
+        //     for(let i=0; i<5; i++) {
+        //     sum += arr[i];
+        //     }
+        //     document.write(sum);
+        //     document.write("<br><br>");
+        // }
         //sample7
         //07. 배열 : 데이터 불러오기 : forEach()
         {
