--- a/javascript/javascriptRefer07.html
+++ b/javascript/javascriptRefer07.html
@@ -457,6 +457,7 @@
             .view table td{
                 border: 1px solid #e6e6e6;
                 padding: 13px 5px 11px 5px;
+                white-space: nowrap;
             }
             .view table td.result{
                 color: #fff;
@@ -495,7 +496,7 @@
         </style>
     </head>
     <body>
-        <h1>Javascript 문법 정리</h1>
+        <h1><a href="index.html">Javascript 레퍼런스</a></h1>
         <ul class="page">
             <li><a href="../refer-html/index.html">HTML</a></li>
             <li><a href="../refer-css/index.html">CSS</a></li>
