--- a/javascript/javascriptRefer09.html
+++ b/javascript/javascriptRefer09.html
@@ -447,7 +447,7 @@
         </style>
     </head>
     <body>
-        <h1>Javascript 문법 정리</h1>
+        <h1><a href="index.html">Javascript 레퍼런스</a></h1>
         <ul class="page">
             <li><a href="../refer-html/index.html">HTML</a></li>
             <li><a href="../refer-css/index.html">CSS</a></li>
