--- a/javascript/javascript100.html
+++ b/javascript/javascript100.html
@@ -270,10 +270,6 @@
         <li><a href="#sample14">14. 객체 : 데이터 저장(키와 값) : 표현 방법6 : 객체 속의 배열</li>
         <li><a href="#sample15">15. 객체 : 데이터 저장(키와 값) : 표현 방법7 : 객체 속의 변수</li>
         <li><a href="#sample16">16. 객체 : 데이터 저장(키와 값) : 표현 방법8 : 객체 속의 함수</li>
-    </ul>
-
-    <h2 class="mt20">추가</h2>
-    <ul>
         <li><a href="#sample17">01. 변수의 종류 : 변수(전역/지역), 매개변수</li>
         <li><a href="#sample18">02. 변수의 변환 : 형 변환</li>
         <li><a href="#sample19">03. 변수의 유형 : 데이터 타입</li>
@@ -620,7 +616,7 @@
     <hr>
 
     <div id="sample17" class="sample">
-        <h2>01. 변수의 종류 : 지역변수, 전역변수<span class="dot"></span></h2>
+        <h2>17. 변수의 종류 : 지역변수, 전역변수<span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 01. 변수의 종류 ***<br>")
@@ -663,7 +659,7 @@
     <hr>
 
     <div id="sample18" class="sample">
-        <h2>02. 변수의 변환 : 형 변환<span class="dot"></span></h2>
+        <h2>18. 변수의 변환 : 형 변환<span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 02. 변수의 변환 ***<br>")
@@ -693,7 +689,7 @@
     <hr>
 
     <div id="sample19" class="sample">
-        <h2>03. 변수의 유형 : 데이터 타입<span class="dot"></span></h2>
+        <h2>19. 변수의 유형 : 데이터 타입<span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 03. 변수의 유형 ***<br>")
@@ -964,9 +960,9 @@
             document.write("<br>");
         }
         //sample17
-        //01. 변수의 종류 : 지역변수, 전역변수
+        //17. 변수의 종류 : 지역변수, 전역변수
         {
-            document.write("*** 01. 변수의 종류 ***<br>")
+            document.write("*** 17. 변수의 종류 ***<br>")
 
             let x = 100; //변수 설정 : 전역 변수
             let y = 200;
@@ -1007,7 +1003,7 @@
         //sample18
         //형 변환
         {
-            document.write("*** 02. 변수의 변환 ***<br>")
+            document.write("*** 18. 변수의 변환 ***<br>")
 
             let x = 100;
             let y = "100";
@@ -1033,7 +1029,7 @@
         // 변수 : 숫자(number), 문자(string), 함수(function), 배열(object), 객체(object), 
         // 불린(Boolean),특수값(null, undefinde), 심볼(symbol)
         {
-            document.write("*** 03. 변수의 유형 ***<br>")
+            document.write("*** 19 변수의 유형 ***<br>")
 
             let num = 100;
             let str = "javascript"
