--- a/javascript/javascriptRefer02.html
+++ b/javascript/javascriptRefer02.html
@@ -55,6 +55,9 @@
         ul {
             list-style: none;
         }
+        ol{
+            padding-left: 26px;
+        }
         a {
             text-decoration: none;
             color: #333;
@@ -195,6 +198,13 @@
             border-style: solid;
         }
         @media (max-width: 800px){
+            body{
+                padding: 5%;
+                font-size: 13px;
+            }
+            h1{
+                text-align: center;
+            }
             .menu li a {
                 font-size: 12px;
                 padding: 5px 20px;
