--- a/javascript/javascriptsample603-3.html
+++ b/javascript/javascriptsample603-3.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS 속성 검색하기</title>
+    <title>HTML 속성 검색하기</title>
     <style>
         @font-face {
             font-family: 'GyeonggiBatang';
@@ -127,6 +127,7 @@
         .button{
             font-family: 'GyeonggiBatang';
             padding: 10px 20px;
+            
 
         }
     </style>
@@ -134,8 +135,8 @@
 <body>
     <div id="wrap">
         <div class="board">
-            <span>CSS 속성을 순서대로 정리하기!!</span>
-            <h1>CSS 속성 정리</h1>
+            <span>HTML 속성을 순서대로 정리하기!!</span>
+            <h1>HTML 속성 정리</h1>
             <div class="button-wrap">
                 <div class="asce">오름차순</div>
                 <div class="desc">내림차순</div>
