--- a/javascript/javascriptRefer01.html
+++ b/javascript/javascriptRefer01.html
@@ -34,19 +34,6 @@
             margin-bottom: 400px;
             line-height: 1.6;
         }
-        .title {
-            border-top: 3px solid #0e43f1;
-            border-bottom: 1px solid #0e43f1;
-            margin-bottom: 20px;
-        }
-        .title h1 a {
-            font-family: 'TmonMonsori';
-            color: #0e43f1;
-            font-size: 50px;
-            display: inline-block;
-            padding: 15px 0 12px;
-            text-transform: uppercase;
-        }
         h1 {
             padding: 20px 0;
         }
@@ -67,6 +54,9 @@
         }
         ul {
             list-style: none;
+        }
+        ol{
+            padding-left: 26px;
         }
         a {
             text-decoration: none;
@@ -193,26 +183,28 @@
         }
         .menu li a {
             font-family: 'NEXON Lv1 Gothic OTF';
-            color: #0e43f1;
-            border: 1px dashed #0e43f1;
+            color: #000;
+            border: 1px dashed #000;
             padding: 10px 30px;
             display: inline-block;
             border-radius: 50px;
             font-size: 16px;
             margin: 4px 1px;
-            box-shadow: inset 0 0 0 #0e43f1;
             transition: all 0.4s;
         }
         .menu li a:hover {
-            box-shadow: inset 0 -100px 0 #0e43f1;
+            box-shadow: inset 0 -100px 0 #000;
             color: #fff;
             border-style: solid;
         }
-        .menu li.active a {
-            background: #0e43f1;
-            color: #fff;
-        }
         @media (max-width: 800px){
+            body{
+                padding: 5%;
+                font-size: 13px;
+            }
+            h1{
+                text-align: center;
+            }
             .menu li a {
                 font-size: 12px;
                 padding: 5px 20px;
@@ -237,10 +229,7 @@
     </style>
 </head>
 <body>
-    <main id="contents">
-        <div class="title">
-            <h1><a href="index.html">데이터 저장하기</a></h1>
-        </div>
+    <h1><a href="index.html">Javascript 레퍼런스</a></h1>
     <ul class="page">
         <li><a href="../refer-html/index.html">HTML</a></li>
         <li><a href="../refer-css/index.html">CSS</a></li>
@@ -267,7 +256,8 @@
             <li><a href="javascriptRefer13.html">알고리즘</a></li>
         </ul>
     </nav>
-    <ul class="list">
+    <h2 class="mt20">데이터 저장하기</h2>
+    <ul>
         <li><a href="#sample01">01. 변수 : 데이터 저장</a></li>
         <li><a href="#sample02">02. 변수 : 데이터 저장 + 데이터 변경</a></li>
         <li><a href="#sample03">03. 변수 : 데이터 저장 + 데이터 변경 + 데이터 추가</a></li>
