--- a/javascript/javascriptsample603-1 .html
+++ b/javascript/javascriptsample603-1 .html
@@ -130,7 +130,7 @@
     <div id="wrap">
         <div class="board">
             <span>속성 중에 첫 글자만 넣어주세요!!</span>
-            <h1>CSS 속성 검색하기</h1>
+            <h1>HTML 속성 검색하기</h1>
             <div class="search">
                 <label for="search-box">검색하기</label>
                 <input id="search-box" type="text">
