--- a/javascript/javascriptsample603-2 .html
+++ b/javascript/javascriptsample603-2 .html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS 속성 검색하기</title>
+    <title>HTML 속성 검색하기</title>
     <style>
         @font-face {
             font-family: 'GyeonggiBatang';
@@ -137,7 +137,7 @@
     <div id="wrap">
         <div class="board">
             <span>속성 중에 첫 글자만 넣어주세요!!</span>
-            <h1>CSS 속성 검색하기</h1>
+            <h1>HTML 속성 검색하기</h1>
             <div class="search">
                 <label for="search-box">검색하기</label>
                 <input id="search-box" class = "search-input" type="text">
